tests/neg/syntax_pp_else_without_condition.baa
// RUN: expect-fail
// EXPECT: #وإلا بدون شرط قبلي مطابق

#وإلا
صحيح الرئيسية() {
    إرجع ٠.
}
